@@ -1,7 +1,7 @@
 default linux
 label linux
   kernel vmlinuz
-  append initrd=initrd.gz boot=casper-net nfsroot=LIVE_SERVER_ADDRESS:LIVE_SERVER_PATH LIVE_BOOTAPPEND
+  append initrd=initrd.gz boot=casper netboot nfsroot=LIVE_SERVER_ADDRESS:LIVE_SERVER_PATH LIVE_BOOTAPPEND
 label memtest
   kernel memtest
 display isolinux.txt
